--- a/App.config
+++ b/App.config
@@ -6,10 +6,7 @@
     <system.serviceModel>
 		<bindings>
       <netTcpBinding>
-          <binding name="NetTcpBinding_IMainManager" receiveTimeout="00:05:00"
-              sendTimeout="00:05:00" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
-              <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647"
-                  maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+          <binding name="NetTcpBinding_IMainManager">
               <security>
                   <transport sslProtocols="None" />
               </security>
@@ -19,7 +16,7 @@
         <client>
             <endpoint address="net.tcp://localhost:8081/Service" binding="netTcpBinding"
                 bindingConfiguration="NetTcpBinding_IMainManager" contract="ItaliaPizzaServices.IMainManager"
-                name="NetTcpBinding_IMainManager1">
+                name="NetTcpBinding_IMainManager">
                 <identity>
                     <userPrincipalName value="MATEBOOK-D15\jafet" />
                 </identity>
