- CashRegisterModule created - UserControls added

--- a/ItaliaPizzaClient.csproj
+++ b/ItaliaPizzaClient.csproj
@@ -96,8 +96,14 @@
     <Compile Include="Model\Supply.cs" />
     <Compile Include="Model\SupplyCategory.cs" />
     <Compile Include="Model\MeasureUnit.cs" />
+    <Compile Include="Views\CashRegisterPage.xaml.cs">
+      <DependentUpon>CashRegisterPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\SignInWindow.xaml.cs">
       <DependentUpon>SignInWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserControls\OpeningCash.xaml.cs">
+      <DependentUpon>OpeningCash.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\UserControls\SupplyCard.xaml.cs">
       <DependentUpon>SupplyCard.xaml</DependentUpon>
@@ -147,8 +153,8 @@
     <Compile Include="Views\RecipesModule\SuppliesList.xaml.cs">
       <DependentUpon>SuppliesList.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\SupplierOrdersModule\OrderSuppliersPage.xaml.cs">
-      <DependentUpon>OrderSuppliersPage.xaml</DependentUpon>
+    <Compile Include="Views\SupplierOrdersModule\SupplierOrdersPage.xaml.cs">
+      <DependentUpon>SupplierOrdersPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\PersonalModule\PersonalPage.xaml.cs">
       <DependentUpon>PersonalPage.xaml</DependentUpon>
@@ -168,8 +174,8 @@
     <Compile Include="Views\PersonalModule\RegisterEmployeePage.xaml.cs">
       <DependentUpon>RegisterEmployeePage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\SupplierOrdersModule\RegisterOrderSupplierPage.xaml.cs">
-      <DependentUpon>RegisterOrderSupplierPage.xaml</DependentUpon>
+    <Compile Include="Views\SupplierOrdersModule\RegisterSupplierOrdersPage.xaml.cs">
+      <DependentUpon>RegisterSupplierOrdersPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\SuppliersModule\RegisterSupplierPage.xaml.cs">
       <DependentUpon>RegisterSupplierPage.xaml</DependentUpon>
@@ -205,7 +211,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\CashRegisterPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\SignInWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserControls\OpeningCash.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -265,7 +279,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\SupplierOrdersModule\OrderSuppliersPage.xaml">
+    <Page Include="Views\SupplierOrdersModule\SupplierOrdersPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -293,7 +307,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\SupplierOrdersModule\RegisterOrderSupplierPage.xaml">
+    <Page Include="Views\SupplierOrdersModule\RegisterSupplierOrdersPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
