--- a/App.config
+++ b/App.config
@@ -19,7 +19,7 @@
           bindingConfiguration="NetTcpBinding_IMainManager" contract="ItaliaPizzaServices.IMainManager"
           name="NetTcpBinding_IMainManager">
           <identity>
-              <userPrincipalName value="MATEBOOK-D15\jafet" />
+              <userPrincipalName value="DESKTOP-HKQ7CK7\Kaleb" />
           </identity>
       </endpoint>
   </client>
