--- a/ItaliaPizzaClient.csproj
+++ b/ItaliaPizzaClient.csproj
@@ -105,6 +105,9 @@
     <Compile Include="Views\UserControls\OpeningCash.xaml.cs">
       <DependentUpon>OpeningCash.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\UserControls\RegisterOutflowMoney.xaml.cs">
+      <DependentUpon>RegisterOutflowMoney.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\UserControls\SupplyCard.xaml.cs">
       <DependentUpon>SupplyCard.xaml</DependentUpon>
     </Compile>
@@ -220,6 +223,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\UserControls\OpeningCash.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserControls\RegisterOutflowMoney.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
