--- a/ItaliaPizzaClient.csproj
+++ b/ItaliaPizzaClient.csproj
@@ -111,6 +111,9 @@
     <Compile Include="Views\UserControls\OpeningCash.xaml.cs">
       <DependentUpon>OpeningCash.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\UserControls\ProductCard.xaml.cs">
+      <DependentUpon>ProductCard.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\UserControls\SupplyCard.xaml.cs">
       <DependentUpon>SupplyCard.xaml</DependentUpon>
     </Compile>
@@ -238,6 +241,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\UserControls\OpeningCash.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserControls\ProductCard.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -549,6 +556,18 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Icons\confirm-hover-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Icons\signin-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\pizza-signin.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\pizza-outline.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Icons\italiapizza-icon2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
