--- a/App.config
+++ b/App.config
@@ -6,8 +6,8 @@
     <system.serviceModel>
 		<bindings>
       <netTcpBinding>
-          <binding name="NetTcpBinding_IMainManager" receiveTimeout="00:00:15"
-              sendTimeout="00:00:15" maxReceivedMessageSize="2147483647">
+          <binding name="NetTcpBinding_IMainManager" receiveTimeout="00:00:12"
+              sendTimeout="00:00:12" maxReceivedMessageSize="21474836">
               <security>
                   <transport sslProtocols="None" />
               </security>
@@ -19,7 +19,7 @@
           bindingConfiguration="NetTcpBinding_IMainManager" contract="ItaliaPizzaServices.IMainManager"
           name="NetTcpBinding_IMainManager">
           <identity>
-              <userPrincipalName value="CEBAGO\Cesar" />
+              <userPrincipalName value="MATEBOOK-D15\jafet" />
           </identity>
       </endpoint>
   </client>
